fix card gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,8 @@ nav {
    padding-bottom: 120px;
    display: flex;
    flex-wrap: wrap;
-   gap: 24px;
+   row-gap: 48px;
+   column-gap: 24px;
 }
 
 .project-card {
